[tool.poetry]
name = "monorhyme"
version = "0.1.0"
description = ""
authors = ["Ian Baldwin <ian@iantbaldw.in>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "7.0.1"
logzero = "^1.5.0"
tomlkit = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pylint = "^2.5.3"
bandit = "^1.6.2"
mypy = "^0.782"
black = "^19.10b0"

[tool.poetry.scripts]
mr = 'monorhyme.cli:monorhyme'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
